# ai-research-assistant

./: .editorconfig  .gitignore  CHANGELOG.md  IMPROVEMENTS.md  INSTALL.md  Makefile  README.md  analysis_report.json  mcp_quick_report.txt  pyproject.toml
.zed/: settings.json
docs/: README_GUIDE.md  README_STRUCTURED.md
examples/: RESEARCH_README_EXAMPLE.md  quick_start.py  smart_detection_demo.py
src/ai_research_assistant/: __init__.py  ai_research_assistant.py  cli.py  demo_usage.py  integrate_mcps.py  readme_parser.py
tests/: __init__.py  test_ai_research_assistant.py  test_metadata_extraction.py  test_readme_parser.py
